# messenger

./: .gitignore  AGENTS.md  Cargo.toml  README.md  flutter_rust_bridge.yaml
.github/workflows/: ci.yml
apps/flutter/: README.md  pubspec.yaml
apps/flutter/lib/: main.dart
apps/flutter/lib/src/: app.dart
apps/flutter/lib/src/bridge/: generated_messenger_api.dart  messenger_bridge.dart  messenger_bridge_factory.dart  mock_messenger_bridge.dart  rust_messenger_bridge.dart
apps/flutter/lib/src/models/: chat_message.dart  contact.dart
apps/flutter/lib/src/screens/: home_screen.dart
apps/flutter/lib/src/state/: messenger_controller.dart
apps/flutter/lib/src/theme/: app_theme.dart
apps/flutter/test/: messenger_app_test.dart  messenger_bridge_factory_test.dart  messenger_controller_test.dart
crates/messenger-client/: Cargo.toml
crates/messenger-client-store/: Cargo.toml
crates/messenger-client-store/src/: lib.rs
crates/messenger-client/src/: lib.rs
crates/messenger-core/: Cargo.toml
crates/messenger-core/src/: lib.rs
crates/messenger-crypto/: Cargo.toml
crates/messenger-crypto/src/: lib.rs
crates/messenger-ffi/: Cargo.toml
crates/messenger-ffi/src/: api.rs  lib.rs
crates/messenger-protocol/: Cargo.toml
crates/messenger-protocol/src/: lib.rs
crates/messenger-storage/: Cargo.toml
crates/messenger-storage/src/: lib.rs
crates/messenger-transport/: Cargo.toml
crates/messenger-transport/src/: lib.rs
docs/: architecture.md  flutter-bridge.md
scripts/: bootstrap-flutter-platforms.sh  dev-db-smoke.sh  dev-relay-smoke.sh  generate-flutter-bridge.sh
server/messenger-server/: Cargo.toml
server/messenger-server/src/: main.rs
tools/messenger-dev/: Cargo.toml
tools/messenger-dev/src/: main.rs
