[package]
name = "messenger-client-store"
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
messenger-crypto = { version = "0.1.0", path = "../messenger-crypto" }
messenger-protocol = { version = "0.1.0", path = "../messenger-protocol" }
rusqlite = { version = "=0.31.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
uuid = { version = "=1.10.0", features = ["serde", "v4"] }

[lints]
workspace = true
