[package]
name = "messenger-crypto"
version = "0.1.0"
edition = "2021"

[dependencies]
blake3 = "1.5.5"
chacha20poly1305 = "0.10.1"
ed25519-dalek = { version = "2.1.1", default-features = false, features = ["rand_core"] }
messenger-protocol = { version = "0.1.0", path = "../messenger-protocol" }
rand_core = "0.6"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
x25519-dalek = { version = "2.0.1", features = ["static_secrets"] }
