[package]
name = "messenger-dev"
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
messenger-crypto = { version = "0.1.0", path = "../../crates/messenger-crypto" }
messenger-protocol = { version = "0.1.0", path = "../../crates/messenger-protocol" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"

[lints]
workspace = true
